--- a/templates/index.html
+++ b/templates/index.html
@@ -97,9 +97,7 @@ section {
 
     </style>
 </head>
-<!-- <body style="background-image: url('{% static "shortner/img/image2.jpg" %}');"> -->
-  
-<body>
+<body style="background-image: url('{% static "shortner/img/image2.jpg" %}');">
 
 <main>
   <h1>URL Shortener</h1>
